Refactor CI workflow for better language handling
Updated CI workflow to improve language detection and build steps.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,17 +13,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js 18
+      - name: Set up Node.js 18 (if present)
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'npm'
 
-      - name: Set up Python 3.x
+      - name: Set up Python 3.x (if present)
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Set up Go 1.20
+      - name: Set up Go 1.20 (if present)
         uses: actions/setup-go@v4
         with:
           go-version: '1.20'
@@ -33,7 +34,7 @@ jobs:
           echo "Repository root:"
           ls -la
 
-      - name: Install dependencies and build (multi-language)
+      - name: Detect languages and build/test
         run: |
           set -e
 
@@ -45,10 +46,12 @@ jobs:
             echo ""
             echo "Detected Node.js project (package.json found)"
             npm ci || npm install || true
-            if npm run | grep -q " build"; then
+            # run build if script exists
+            if npm run | sed -n '1,200p' | grep -q " build"; then
               echo "Running npm run build"
               npm run build || true
             fi
+            # run tests if any
             if npm test --silent 2>/dev/null; then
               echo "Running npm test"
               npm test || true
@@ -61,7 +64,7 @@ jobs:
           if [ -f requirements.txt ] || [ -f pyproject.toml ] || [ -f setup.py ]; then
             echo ""
             echo "Detected Python project"
-            python -m pip install --upgrade pip
+            python -m pip install --upgrade pip setuptools wheel || true
             if [ -f requirements.txt ]; then
               pip install -r requirements.txt || true
             fi
@@ -84,8 +87,8 @@ jobs:
           if ls *.go >/dev/null 2>&1 || [ -d cmd ]; then
             echo ""
             echo "Detected Go project"
-            go version
-            go env
+            go version || true
+            go env || true
             go build ./... || true
             go test ./... || true
           else
@@ -95,11 +98,11 @@ jobs:
           # Makefile
           if [ -f Makefile ]; then
             echo ""
-            echo "Makefile found — running common targets if present"
-            if grep -q "^build:" Makefile; then
+            echo "Makefile found — running build/test if present"
+            if grep -qE '^build:' Makefile; then
               make build || true
             fi
-            if grep -q "^test:" Makefile; then
+            if grep -qE '^test:' Makefile; then
               make test || true
             fi
           fi
@@ -119,13 +122,12 @@ jobs:
               paths="$paths $a"
             fi
           done
-          echo "::set-output name=paths::$paths"
+          # Trim leading space
+          paths="$(echo $paths | sed 's/^ *//')"
+          echo "paths=$paths" >> $GITHUB_OUTPUT
 
       - name: Upload build artifacts (if any)
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-output
-          path: ${{ steps.collect.outputs.paths }}
+        if: ${{ steps.collect.outputs.paths != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: build-output
