--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
- url=https://github.com/111byte111/byte/blob/3b2d1079454f49f390d872ff67976876031bac71/.github/workflows/ci.yml
 name: CI
 
 on:
@@ -55,7 +54,7 @@ jobs:
               npm ci
             elif [ -f pnpm-lock.yaml ]; then
               echo "Found pnpm-lock.yaml -> running: pnpm install --frozen-lockfile"
-              npm i -g pnpm@latest || true
+              npm i -g pnpm || true
               pnpm install --frozen-lockfile || pnpm install
             elif [ -f yarn.lock ]; then
               echo "Found yarn.lock -> running: yarn install --frozen-lockfile"
@@ -65,14 +64,14 @@ jobs:
               npm install
             fi
 
-            # run build script if present in package.json
-            if grep -q '"build"' package.json >/dev/null 2>&1; then
+            # run build script if present
+            if npm run | sed -n '1,200p' | grep -q " build"; then
               echo "Running npm run build"
               npm run build || true
             fi
 
-            # run tests if a test script is present (avoid running tests twice)
-            if grep -q '"test"' package.json >/dev/null 2>&1 && ! grep -q '"test":[[:space:]]*"echo "package.json" >/dev/null 2>&1; then
+            # run tests if present
+            if npm test --silent 2>/dev/null; then
               echo "Running npm test"
               npm test || true
             fi
@@ -95,10 +94,9 @@ jobs:
             if [ -f setup.py ]; then
               pip install . || true
             fi
-            # run pytest if tests exist
             if [ -d tests ] || ls *_test.py >/dev/null 2>&1; then
               pip install pytest || true
-              python -m pytest -q || true
+              pytest || true
             fi
           else
             echo "No Python packaging files detected"
@@ -131,8 +129,6 @@ jobs:
       - name: Collect common artifact paths
         id: collect
         run: |
-          # enable nullglob so patterns that don't match are removed (no literal globs)
-          shopt -s nullglob
           paths=""
           for p in build dist out; do
             if [ -d "$p" ]; then
@@ -140,12 +136,12 @@ jobs:
             fi
           done
           for a in *.tar.gz *.zip *.exe; do
-            for f in $a; do
-              paths="$paths $f"
-            done
+            if ls $a >/dev/null 2>&1; then
+              paths="$paths $a"
+            fi
           done
-          # Trim leading/trailing whitespace
-          paths="$(echo "$paths" | sed -e 's/^ *//' -e 's/ *$//')"
+          # Trim leading space
+          paths="$(echo $paths | sed 's/^ *//')"
           echo "paths=$paths" >> $GITHUB_OUTPUT
 
       - name: Upload build artifacts (if any)
